<?xml version="1.0"?>
<package format="3">
  <name>miniarm_moveit_config</name>
  <version>2.0.3</version>
  <description>
    <p>
      MoveIt Resources for testing: AJ Mini Arm
    </p>
    <p>
      A project-internal configuration for testing in MoveIt.
    </p>
  </description>
  <author email="jshulgac@andrew.cmu.edu">Jonathan Shulgach</author>
  <maintainer email="jshulgac@andrew.cmu.edu">Jonathan Shulgach</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
