<?xml version="1.0"?>
<package format="2">
  <name>miniarm_servo</name>
  <version>1.0.0</version>

  <description>Provides real-time manipulator Cartesian and joint servoing for AJ Mini-arm.</description>

  <maintainer email="jshulgac@andrew.cmu.edu">Jonathan Shulgach</maintainer>

  <license>BSD 3-Clause</license>

  <url type="website">https://ros-planning.github.io/moveit_tutorials</url>

  <author>Jonathan Shulgach</author>
  <author email="jshulgac@andrew.cmu.edu">Jonathan Shulgach</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>moveit_common</build_depend>

  <depend>control_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_eigen</depend>
  <!-- <depend>trajectory_msgs</depend> -->

  <!-- <exec_depend>gripper_controllers</exec_depend> -->
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <!-- <exec_depend>joy</exec_depend> -->
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <!-- <test_depend>moveit_resources_panda_moveit_config</test_depend> -->
  <test_depend>ros_testing</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>