<?xml version="1.0"?>
<package format="3">
  <name>miniarm_core</name>
  <version>0.3.0</version>
  <description>Python client library for controlling the Mini-Arm 6-DOF robot</description>

  <author email="jshulgac@andrew.cmu.edu">Jonathan Shulgach</author>
  <maintainer email="jshulgac@andrew.cmu.edu">Jonathan Shulgach</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/Jshulgach/Mini-Arm</url>
  <url type="repository">https://github.com/Jshulgach/Mini-Arm</url>
  <url type="bugtracker">https://github.com/Jshulgach/Mini-Arm/issues</url>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3-serial</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
