<?xml version="1.0"?>
<package format="3">
  <name>miniarm_description</name>
  <version>2.0.3</version>
  <description>Resources used for MoveIt testing</description>

  <author email="jshulgac@andrew.cmu.edu">Jonathan Shulgach</author>
  <maintainer email="jshulgac@andrew.cmu.edu">Jonathan Shulgach</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
