<?xml version="1.0"?>
<package format="3">
  <name>miniarm_moveit_config</name>
  <version>0.3.0</version>
  <description>MoveIt2 configuration for the Mini-Arm 6-DOF robot</description>

  <author email="jshulgac@andrew.cmu.edu">Jonathan Shulgach</author>
  <maintainer email="jshulgac@andrew.cmu.edu">Jonathan Shulgach</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/Jshulgach/Mini-Arm</url>
  <url type="repository">https://github.com/Jshulgach/Mini-Arm</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>miniarm_description</depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <!-- Python pip package for robot control -->
  <!-- Install with: pip install mini-arm -->

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
